<resources>
    <string name="app_name">TasavaltaBeta</string>
    <string name="action_settings">Settings</string>

    <string name="vakio_kirja">Bookmarks</string>
    <string name="vakio_kielie">English</string>
    <string name="vakio_kielis">Finnish</string>
    <string name="vakio_grafe">Use elaborate graphics</string>
    <string name="vakio_grafs">Use simple graphics</string>
    <string name="vakio_luo">Create bookmark</string>
    <string name="vakio_apua">Help</string>
    <string name="vakio_about">About</string>
    <string name="vakio_tuhoa">Delete bookmarks</string>
    <string name="vakio_sulje">Close program</string>
    <string name="vakio_kirja1">Bookmark 1</string>
    <string name="vakio_kirja2">Bookmark 2</string>
    <string name="vakio_kirja3">Bookmark 3</string>
    <string name="vakio_kirja4">Bookmark 4</string>
    <string name="vakio_kirja5">Bookmark 5</string>
    <string name="vakio_kirja6">Bookmark 6</string>
    <string name="vakio_kirja7">Bookmark 7</string>
    <string name="vakio_kirja8">Bookmark 8</string>
    <string name="vakio_kirja9">Bookmark 9</string>
    <string name="vakio_3D_1">3D 1</string>
    <string name="vakio_3D_2">3D 2</string>
    <string name="vakio_3D_3">3D 3</string>
    <string name="vakio_3D_4">3D 4</string>
    <string name="vakio_3D_5">3D 5</string>
    <string name="vakio_stories1">Stories 1</string>
    <string name="vakio_stories2">Stories 2</string>
    <string name="vakio_stories3">Stories 3</string>
    <string name="vakio_stories4">Stories 4</string>
    <string name="vakio_stories5">Stories 5</string>
    <string name="vakio_valikko">Main menu</string>
    <string name="vakio_teksti">Text viewer</string>
    <string name="vakio_tulostaT">Print Text</string>
    <string name="vakio_tulostaC">Print CAD</string>
    <string name="vakio_cad">CAD viewer</string>
    <string name="eteen">Forward</string>
    <string name="taakse">Back</string>
    <string name="tulosta">Print</string>
    <string name="otsikot">Paragraphs</string>
    <string name="teksti_otsikko">Text viewer</string>
    <string name="CAD_otsikko">CAD viewer</string>
    <string name="kaynnista">Play</string>
    <string name="pysayta">Stop</string>
    <string name="alkuun">Rewind</string>
    <string name="valinta">Listing</string>
    <string name="valinta_lista_otsikko">Select/deselect objects and options</string>
    <string name="linkki_lista_otsikko">Select a link to go</string>
    <string name="peruuta">Cancel</string>
    <string name="OK">OK</string>
    <string name="Kylla">Yes</string>
    <string name="Ei">No</string>
    <string name="otsikko_lista_otsikko">Select a paragraph to go</string>
    <string name="resoluutio_lista_otsikko">Select an appropriate resolution</string>
    <string name="tausta_kysely_otsikko">Print CAD: Do you want white background instead of black?</string>
    <string name="resoluutio_lista_ohje">Print text: A PDF document will be heavy because it is an image file. If you are not printing to the paper, please choose a low resolution.</string>
    <string name="dpi75">75 dots per inch</string>
    <string name="dpi100">100 dots per inch</string>
    <string name="dpi150">150 dots per inch</string>
    <string name="dpi300">300 dots per inch</string>
    <string name="dpi600">600 dots per inch</string>
</resources>
